--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,9 @@
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<main>  
 			<h1>Form Builder App</h1>                            
-			<div class="formBuilderApp">                
-				<div id="container"></div>                  
-				<button class="btn btn_success" type="button">Add Input</button>
-			</div>    
+			<div class="formBuilder">                
+				<button class="btn btn_success" data-parent="-1" type="button">Add Input</button>
+			</div>  			  
 		</main>                              
 	</body>
-</html>
+</html>  
